crates/config/macros/__broken_tests/ui/fail/env_test/abi.stderr
error: external ABIs are not allowed in test code
  --> tests/ui/fail/env_test/abi.rs:25:5
   |
25 | pub extern "C" fn hewo() {}
   |     ^^^^^^
